<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="15dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpandSupport">

    <TextView
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/hst1"/>

    <TextView
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/hst2"/>

    <TextView
        android:id="@+id/t1"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:linksClickable="true"
        android:text="@string/hst3"
        android:textColor="#000000"/>

    <TextView
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/hst4"/>

    <TextView
        android:id="@+id/t2"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:linksClickable="true"
        android:text="@string/hst5"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/t3"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:linksClickable="true"
        android:text="@string/hst9"
        android:textColor="#000000"/>

</androidx.appcompat.widget.LinearLayoutCompat>