<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/aut1"
        style="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginHorizontal="25dp"
        android:text="@string/aut2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/github"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:background="#4da6ff"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/aut3"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/aut4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/gmail"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:linksClickable="true"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/aut5"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/suggest"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:linksClickable="true"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/aut6"/>
</androidx.appcompat.widget.LinearLayoutCompat>