<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navfrag.HomeFragment">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textColor="#8c8c8c"
                android:layout_marginTop="15dp"
                style="@style/TextAppearance.AppCompat"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:typeface="serif"
                android:textSize="20sp"
                android:text="@string/mainat1"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/mainat2"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/mainat3"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/mainat4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/mainat5"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/mainat6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/mainat7"/>

            <TextView
                android:id="@+id/splash"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#8c8c8c"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/homet1"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>